2010-02-08 [pawel]	3.7.5cvs8

	* src/compose.c
	* src/compose.h
	* src/common/utils.c
	* src/common/utils.h
	* src/gtk/authors.h
		Fix Bug 2058 "use in-reply-to info passed in mailto: links"
		Patch by Laurent Bigonville with slight modifications

2010-02-03 [pawel]	3.7.5cvs7

	* m4/.cvsignore
		Add some libtool files to ignore

2010-02-03 [pawel]	3.7.5cvs6

	* src/plugins/trayicon/trayicon.c
		Save and then restore focus when closing/minimizing to tray

2010-02-03 [mir]	3.7.5cvs5

	* src/addrindex.c
	* src/editldap.c
	* src/ldapctrl.c
	* src/ldapctrl.h
	* src/ldapquery.c
	* src/ldapupdate.c
	    Save LDAP password encrypted. See bug 2113.


2010-02-03 [colin]	3.7.5cvs4

	* src/privacy.c
		Fix again decoding of encrypted parts. The
		reverting of the patch was wrong, as the
		double-decoding was fixed in smime itself.
		Thanks to Matthias Drochner again...

2010-02-02 [colin]	3.7.5cvs3

	* src/plugins/smime/smime.c
	* src/privacy.c
		Revert 3.7.4cvs2 and make a better patch for bug
		2059 and 2076. Patch by Matthias Drochner

2010-01-31 [pawel]	3.7.5cvs2

	* src/gtk/authors.h
		Fix hungarian translator's name

2010-01-31 [pawel]	3.7.5cvs1

	* src/messageview.c
	* src/mimeview.c
		Fix Bug 2107 - Arrow keys don't work in message view window

2010-01-31 [paul]	3.7.5

	* NEWS
	* README
	* RELEASE_NOTES	
		3.7.5 released!

2010-01-23 [pawel]	3.7.4cvs10

	* src/addressbook.c
		Fix button sensitivity in compose mode

2010-01-23 [pawel]	3.7.4cvs9

	* commitHelper
	* tools/kdeservicemenu/install.sh
	* tools/make.themes.project
	* tools/nautilus2claws-mail.sh
	* tools/popfile-link.sh
	* tools/textviewer.sh
		Not all systems have bash installed in /bin, use env(1) to find
		it`s location

2010-01-22 [pawel]	3.7.4cvs8

	* src/prefs_account.c
	* src/prefs_filtering.c
	* src/prefs_send.c
	* src/gtk/colorlabel.c
		Add some separators in combos

2010-01-22 [pawel]	3.7.4cvs7

	* autogen.sh
		--disable-aspell -> --disable-enchant
	* configure.ac